syntax = "proto3";

package at.tugraz.oop2;

message RoadbyIdRequest {
    int32 id = 1;
}

message RoadbyIdResponse {
    string map_image_url = 2;
}

service MapService {
    rpc GetRoadbyId(RoadbyIdRequest) returns (RoadbyIdResponse);
}
